<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Sunshine</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_share">Share</string>
    <string name="action_show_location_map">Show Map</string>
    <string name="title_activity_detail">DetailActivity</string>

    <string name="pref_title_location_label">Location</string>
    <string name="pref_location_key" translatable="false">location</string>
    <string name="pref_default_location" translatable="false">94043</string>

    <string name="pref_title_units_label">Temperature Unit</string>
    <string name="pref_units_key" translatable="false">temperatureUnits</string>
    <string name="pref_units_metric" translatable="false">metric</string>
    <string name="pref_units_imperial" translatable="false">imperial</string>

    <string-array name="pref_units_list_titles">
        <item>Metric</item>
        <item>Imperial</item>
    </string-array>
    <string-array name="pref_units_list_values">
        <item>metric</item>
        <item>imperial</item>
    </string-array>

</resources>
